# RocketStudio---Yahia-Saad

./: LICENSE.md  README.md  run.bat  run_all.py
cpp/: CMakeLists.txt  main.cpp
cpp/app/: App.cpp  App.h  Gui.cpp  Gui.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Theme.cpp  Theme.h
cpp/io/: CSVWriter.cpp  CSVWriter.h  ConfigIO.cpp  ConfigIO.h  JSONWriter.cpp  JSONWriter.h
cpp/physics/: Constants.h  Environment.cpp  Environment.h  Integrator.cpp  Integrator.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsState.h  Rocket.cpp  Rocket.h  SimulationConfig.h  SimulationRecorder.cpp  SimulationRecorder.h  SimulationResult.h  Stage.h  Vec2.h
cpp/utils/: Logger.cpp  Logger.h  MathUtils.h  Timer.cpp  Timer.h
data/: default_config.json  summary.json
docs/: architecture.md  credits_license.md  equations.md  physics_explanation.md  usage.md  video_chapter_plan.md  video_intro_script.md
python_tools/: analyze_results.py  plot_results.py  replay_csv.py
